# pyfiken

./: .gitignore  README.md  pyproject.toml
tests/: test_pyfiken.py
